Related: tdf#86473 git rid of special pixel snapping for rectangles

Change-Id: Ia9ab5c58975df2de8c261d92a866cbe264d03205